# special-parakeet

./: Dockerfile  MAINTAINERS.md  README.md  pyproject.toml
.github/workflows/: build-agent.yaml
src/beeai_agents/: agent.py
